# copilotkit-langgraph-history-example

./: .gitignore  README.md  env.example
agent/: agent.py  main.py  ownership.py  pyproject.toml
ui/: next.config.js  package.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/api/copilotkit/: route.ts
ui/src/lib/: custom-history-client.ts
